--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste Título</title>
+    <title></title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Teste Título</h1>
+            <h1>Teste</h1>
         </header>
         <article>
-            <h2>Índice 1</h2>
-            <p>Texto Índice 001</p>
+            <h2>Teste 1</h2>
+            <p>Texto Teste 1</p>
         </article>
         <article>
-            <h2>Índice 2</h2>
-            <p>Texto Índice 2 </p>
+            <h2>Teste 2</h2>
+            <p>Texto Teste 2 </p>
         </article>
     </main>
 </body>
